# foxy

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  foxy-linux-clang.cmake  foxy-linux.cmake  foxy-osx.cmake  foxy-travis.cmake  foxy.cmake
cmake/: foxy-config.cmake.in
docs/: allocator-client.md  asio-and-beast.md  building.md  faq.md  fuzzing.md  hello-world.md  index.md  intro.md  reference.md  server.md  uri-combinators.md
docs/reference/: basic_multi_stream.md  client_session.md  code_point_iterator.md  code_point_view.md  encode_fragment.md  encode_host.md  encode_path.md  encode_query.md  listener.md  make_ssl_ctx.md  multi_stream.md  parse_authority.md  parse_complete.md  parse_uri.md  pct_decode.md  pct_encoding.md  proxy.md  server_session.md  session.md  session_opts.md  speak.md  uri.md  uri_parts.md  utf8.md
examples/: CMakeLists.txt
examples/allocators/: client.cpp
examples/hello_world/: main.cpp
examples/https_server/: main.cpp
examples/listener/: main.cpp
examples/server/: main.cpp
examples/uri_combinators/: ip_parser.cpp
examples/user-install/: CMakeLists.txt  README.md  main.cpp
examples/user-install/tools/: user-config-linux.cmake  user-config-osx.cmake  user-config-win.cmake
fuzz/: CMakeLists.txt  dict.txt  parse_uri.cpp
include/: CMakeLists.txt  foxy.hpp
include/boost/smart_ptr/: allocate_unique.hpp
include/foxy/: client_session.hpp  code_point_iterator.hpp  code_point_view.hpp  error.hpp  iterator.hpp  listener.hpp  log.hpp  multi_stream.hpp  parse_uri.hpp  pct_decode.hpp  pct_encode.hpp  proxy.hpp  server_session.hpp  session.hpp  session_opts.hpp  shared_handler_ptr.hpp  speak.hpp  type_traits.hpp  uri.hpp  uri_parts.hpp  url_builder.hpp  utf8.hpp  utility.hpp
include/foxy/detail/: close_stream.hpp  detect_ssl.hpp  export_connect_fields.hpp  export_non_connect_fields.hpp  has_token.hpp  parse_host_and_path.hpp  relay.hpp  timed_op_wrapper.hpp  timed_op_wrapper_v2.hpp  timed_op_wrapper_v3.hpp  tunnel.hpp  uri_def.hpp
include/foxy/detail/mp11/: function.hpp  utility.hpp
include/foxy/detail/mp11/detail/: config.hpp
include/foxy/detail/variant2/: variant.hpp
include/foxy/experimental/core/: flat_stream.hpp  ssl_stream.hpp
include/foxy/impl/: client_session.impl.hpp  session.impl.hpp  shared_handler_ptr.impl.hpp
include/foxy/impl/client_session/: async_connect.impl.hpp  async_request.impl.hpp  async_shutdown.impl.hpp
include/foxy/impl/server_session/: async_detect_ssl.impl.hpp  async_handshake.impl.hpp  async_shutdown.impl.hpp
include/foxy/impl/session/: async_read.impl.hpp  async_read_header.impl.hpp  async_write.impl.hpp  async_write_header.impl.hpp
src/: CMakeLists.txt  asio.cpp  beast.cpp  client_session.cpp  log.cpp  multi_stream.cpp  parse_uri.cpp  pct_encode.cpp  proxy.cpp  server_session.cpp  session.cpp  uri.cpp  uri_parts.cpp  utility.cpp
test/: CMakeLists.txt  allocator_client_test.cpp  client_session_test.cpp  code_point_view_test.cpp  export_connect_fields_test.cpp  export_non_connect_fields.cpp  export_non_connect_fields_test.cpp  iterator_test.cpp  listener_test.cpp  main.cpp  niall_body_test.cpp  parse_host_and_path_test.cpp  parse_uri_test.cpp  pct_decode_test.cpp  pct_encode_test.cpp  proxy_test.cpp  proxy_test2.cpp  relay_test.cpp  root-cas.pem  server_session_test.cpp  session_test.cpp  speak_test.cpp  ssl_client_session_test.cpp  timed_op_wrapper_v3.cpp  tunnel_test.cpp  unicode_uri_test.cpp  uri_parts_test.cpp  uri_test.cpp  url_builder_test.cpp  utility_test.cpp
test/include/foxy/test/helpers/: ssl_ctx.cpp  ssl_ctx.hpp
tools/: foxy-linux-clang.cmake  foxy-linux.cmake  foxy-osx.cmake  foxy-win.cmake  wsl.cmake
tools/cmake-superbuild/: CMakeLists.txt
user-install/: CMakeLists.txt  main.cpp
user-install/tools/: user-config.cmake
